--- a/apps/initial-experiment/package.json
+++ b/apps/initial-experiment/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "latest",
     "@superfluid-finance/metadata": "git+https://github.com/superfluid-finance/metadata.git",
     "@uniswap/token-lists": "1.0.0-beta.31",
+    "@wagmi/chains": "^0.2.19",
     "@wagmi/core": "0.10.9",
     "@web3modal/ethereum": "2.3.3",
     "@web3modal/react": "2.3.3",
@@ -37,13 +38,13 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "eslint-config-custom": "workspace:*",
     "@hookform/devtools": "^4.3.1",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@wagmi/cli": "0.1.15",
     "eslint": "latest",
+    "eslint-config-custom": "workspace:*",
     "eslint-config-next": "latest",
     "typescript": "latest"
   }
