--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "checkout-builder",
-  "version": "5.0.0",
+  "name": "superfluid-checkout-builder",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
