--- a/examples/widget-vite/package.json
+++ b/examples/widget-vite/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@uniswap/token-lists": "1.0.0-beta.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "superfluid-checkout-widget": "workspace:*"
