--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -14,13 +14,17 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
+    "@uniswap/token-lists": "1.0.0-beta.31",
+    "abitype": "^0.7.1",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "zod": "^3.21.4",
+    "superfluid-checkout-core": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "latest",
     "@types/react-dom": "latest",
-    "typescript": "latest",
-    "tsconfig": "workspace:*"
+    "tsconfig": "workspace:*",
+    "typescript": "latest"
   }
 }
