--- a/packages/widget/tsconfig.json
+++ b/packages/widget/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "tsconfig/react-library.json",
-  "include": ["."],
-  "exclude": ["dist", "build", "node_modules"]
+  "include": [".", "../core/src/TimePeriod.ts"],
+  "exclude": ["node_modules"]
 }
