--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -23,6 +23,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.3.1",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "tsconfig": "workspace:*",
