--- a/packages/widget/tsconfig.json
+++ b/packages/widget/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "tsconfig/react-library.json",
-  "include": [".", "../core/src/TimePeriod.ts"],
+  "include": ["./src/**/*"],
   "exclude": ["node_modules"],
   "compilerOptions": {
     "lib": ["ESNext", "DOM"],
