--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "latest",
     "@uniswap/token-lists": "1.0.0-beta.31",
     "abitype": "^0.7.1",
+    "ethers": "^5.7.2",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.44.0-rc.0",
