--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -15,18 +15,21 @@
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
     "@uniswap/token-lists": "1.0.0-beta.31",
+    "@wagmi/core": "0.10.9",
     "abitype": "^0.7.1",
     "ethers": "^5.7.2",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.44.0-rc.0",
     "superfluid-checkout-core": "workspace:*",
+    "wagmi": "^0.12.10",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "@wagmi/core": "^0.10.9",
     "tsconfig": "workspace:*",
     "typescript": "latest"
   }
