--- a/apps/initial-experiment/package.json
+++ b/apps/initial-experiment/package.json
@@ -23,9 +23,9 @@
     "@superfluid-finance/metadata": "git+https://github.com/superfluid-finance/metadata.git",
     "@uniswap/token-lists": "1.0.0-beta.31",
     "@wagmi/chains": "^0.2.19",
-    "@wagmi/core": "0.10.9",
-    "@web3modal/ethereum": "2.3.3",
-    "@web3modal/react": "2.3.3",
+    "@wagmi/core": "^0.10.10",
+    "@web3modal/ethereum": "^2.3.7",
+    "@web3modal/react": "^2.3.7",
     "abitype": "^0.7.1",
     "clsx": "^1.2.1",
     "ethers": "^5.7.2",
@@ -34,7 +34,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.44.0-rc.0",
-    "wagmi": "0.12.10",
+    "wagmi": "^0.12.12",
     "zod": "^3.21.4"
   },
   "devDependencies": {
