--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -20,7 +20,7 @@
     "ethers": "^5.7.2",
     "react": "latest",
     "react-dom": "latest",
-    "react-hook-form": "^7.44.0-rc.0",
+    "react-hook-form": "^v7.44.0-rc.1",
     "superfluid-checkout-core": "workspace:*",
     "wagmi": "^0.12.10",
     "zod": "^3.21.4"
