--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -14,16 +14,20 @@
     "@emotion/react": "latest",
     "@emotion/server": "latest",
     "@emotion/styled": "latest",
+    "@hookform/devtools": "^4.3.1",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
+    "@uniswap/token-lists": "1.0.0-beta.31",
     "clsx": "^1.2.1",
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "react-hook-form": "^7.44.0-rc.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/node": "latest",
-    "@types/react": "latest",
+    "@types/react": "^18.2.5",
     "eslint-config-custom": "workspace:*",
     "tsconfig": "workspace:*",
     "typescript": "latest"
