--- a/apps/initial-experiment/package.json
+++ b/apps/initial-experiment/package.json
@@ -42,7 +42,7 @@
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
-    "@wagmi/cli": "0.1.15",
+    "@wagmi/cli": "^0.1.15",
     "eslint": "latest",
     "eslint-config-custom": "workspace:*",
     "eslint-config-next": "latest",
