--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
+    "eslint": "^8.39.0",
     "eslint-config-custom": "workspace:*",
-    "prettier": "^2.5.1",
-    "turbo": "latest"
+    "prettier": "^2.8.8",
+    "syncpack": "^9.8.6",
+    "turbo": "^1.9.3"
   },
   "packageManager": "pnpm@7.15.0",
   "name": "superfluid-checkout"
