--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -27,7 +27,7 @@
   },
   "devDependencies": {
     "@types/node": "latest",
-    "@types/react": "^18.2.5",
+    "@types/react": "latest",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "typescript": "latest"
