--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "latest",
     "@uniswap/token-lists": "1.0.0-beta.31",
     "clsx": "^1.2.1",
+    "ethers": "5.7.2",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
