include widget in the builder (broken state)

--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -23,6 +23,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.44.0-rc.3",
+    "superfluid-checkout-widget": "workspace:^",
     "zod": "^3.21.4"
   },
   "devDependencies": {
