--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -15,14 +15,14 @@
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
     "@uniswap/token-lists": "1.0.0-beta.31",
-    "@wagmi/core": "^0.10.10",
+    "@wagmi/core": "^1.0.0",
     "abitype": "^0.7.1",
-    "ethers": "^5.7.2",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^v7.44.0-rc.3",
     "superfluid-checkout-core": "workspace:*",
-    "wagmi": "^0.12.12",
+    "viem": "^0.3.19",
+    "wagmi": "^1.0.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
