--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -16,13 +16,15 @@
     "@mui/material": "latest",
     "@uniswap/token-lists": "1.0.0-beta.31",
     "@wagmi/core": "^1.0.0",
+    "@web3modal/ethereum": "^2.4.1",
+    "@web3modal/react": "^2.4.1",
     "abitype": "^0.7.1",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^v7.44.0-rc.3",
     "superfluid-checkout-core": "workspace:*",
     "viem": "^0.3.19",
-    "wagmi": "^1.0.0",
+    "wagmi": "^1.0.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
