--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -20,6 +20,7 @@
     "@uniswap/token-lists": "1.0.0-beta.31",
     "clsx": "^1.2.1",
     "ethers": "5.7.2",
+    "mui-color-input": "^1.0.5",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
