--- a/apps/initial-experiment/package.json
+++ b/apps/initial-experiment/package.json
@@ -24,8 +24,8 @@
     "@uniswap/token-lists": "1.0.0-beta.31",
     "@wagmi/chains": "^0.2.19",
     "@wagmi/core": "^0.10.10",
-    "@web3modal/ethereum": "^2.3.7",
-    "@web3modal/react": "^2.3.7",
+    "@web3modal/ethereum": "~2.3.7",
+    "@web3modal/react": "~2.3.7",
     "abitype": "^0.7.1",
     "clsx": "^1.2.1",
     "ethers": "^5.7.2",
