--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "eslint": "^8.39.0",
+    "eslint": "^8.40.0",
     "eslint-config-custom": "workspace:*",
     "prettier": "^2.8.8",
     "syncpack": "^9.8.6",
-    "turbo": "^1.9.3"
+    "turbo": "^1.9.3",
+    "typescript": "latest"
   },
   "packageManager": "pnpm@7.15.0",
   "name": "superfluid-checkout"
