--- a/apps/builder/tsconfig.json
+++ b/apps/builder/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "target": "ES2020",
+    "lib": ["DOM", "DOM.Iterable", "ESNext", "ES2020"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
