--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -13,7 +13,6 @@
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
-    "@mui/material": "latest",
     "@uniswap/token-lists": "1.0.0-beta.31",
     "@wagmi/core": "^1.0.0",
     "@web3modal/ethereum": "^2.4.1",
@@ -29,9 +28,13 @@
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
+    "@mui/material": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "tsconfig": "workspace:*",
     "typescript": "latest"
+  },
+  "peerDependencies": {
+    "@mui/material": "latest"
   }
 }
