--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -15,21 +15,21 @@
     "@mui/icons-material": "^5.0.0",
     "@mui/lab": "5.0.0-alpha.129",
     "@uniswap/token-lists": "1.0.0-beta.31",
-    "@wagmi/core": "^1.0.0",
+    "@wagmi/core": "^1.0.4",
     "@web3modal/ethereum": "^2.4.1",
     "@web3modal/react": "^2.4.1",
     "abitype": "^0.7.1",
     "react": "latest",
     "react-dom": "latest",
-    "react-hook-form": "^v7.44.0-rc.3",
+    "react-hook-form": "7.44.0-rc.3",
     "superfluid-checkout-core": "workspace:*",
-    "viem": "^0.3.19",
-    "wagmi": "^1.0.1",
+    "viem": "^0.3.24",
+    "wagmi": "^1.0.4",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
-    "@mui/material": "^5.0.0",
+    "@mui/material": "^5.13.0",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "tsconfig": "workspace:*",
