--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "latest",
     "@mui/lab": "5.0.0-alpha.125",
     "@mui/material": "latest",
+    "@pinata/sdk": "^2.1.0",
     "@tokdaniel/superfluid-tokenlist": "^1.0.0",
     "@uniswap/token-lists": "1.0.0-beta.31",
     "clsx": "^1.2.1",
