--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -7,7 +7,10 @@
   "types": "src/index.d.ts",
   "scripts": {
     "watch": "tsc -w -p ./tsconfig.json",
-    "build": "tsc --build --clean"
+    "build": "rimraf dist && tsc -p ./tsconfig.json",
+    "rollup:bundle": "rollup -c",
+    "rollup:types": "rollup -c rollup-types.config.js",
+    "rollup": "pnpm build && pnpm rollup:bundle && pnpm rollup:types"
   },
   "dependencies": {
     "@emotion/react": "latest",
@@ -23,6 +26,7 @@
     "react-dom": "latest",
     "react-hook-form": "7.44.0-rc.3",
     "superfluid-checkout-core": "workspace:*",
+    "tsup": "^6.7.0",
     "viem": "^0.3.26",
     "wagmi": "^1.0.5",
     "zod": "^3.21.4"
@@ -30,8 +34,12 @@
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
     "@mui/material": "^5.13.0",
+    "@rollup/plugin-terser": "^0.4.3",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "rimraf": "^5.0.1",
+    "rollup": "^3.22.0",
+    "rollup-plugin-dts": "^5.3.0",
     "tsconfig": "workspace:*",
     "typescript": "latest"
   },
