--- a/packages/widget/tsconfig.json
+++ b/packages/widget/tsconfig.json
@@ -6,6 +6,8 @@
     "jsx": "react-jsx",
     "lib": ["ESNext"],
     "module": "ESNext",
-    "target": "ES2020"
+    "target": "ES2020",
+    "outDir": "./dist/src",
+    "declaration": true
   }
 }
