webcomponent example starter

--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
     "@mui/material": "^5.13.0",
+    "@rollup/plugin-multi-entry": "^6.0.0",
     "@rollup/plugin-terser": "^0.4.3",
     "@types/react": "latest",
     "@types/react-dom": "latest",
