--- a/packages/widget/tsconfig.json
+++ b/packages/widget/tsconfig.json
@@ -4,7 +4,7 @@
   "exclude": ["node_modules"],
   "compilerOptions": {
     "jsx": "react-jsx",
-    "lib": ["ESNext"],
+    "lib": ["ESNext", "DOM"],
     "module": "ESNext",
     "target": "ES2020",
     "outDir": "./dist/src",
