--- a/packages/widget/tsconfig.json
+++ b/packages/widget/tsconfig.json
@@ -7,7 +7,7 @@
     "lib": ["ESNext", "DOM"],
     "module": "ESNext",
     "target": "ES2020",
-    "outDir": "./dist/src",
+    "outDir": "./dist",
     "declaration": true
   }
 }
