rename webcomponent example

--- a/examples/widget-webcomponent/package.json
+++ b/examples/widget-webcomponent/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "widget-vite-example",
+  "name": "widget-webcomponent-example",
   "private": true,
   "version": "0.0.1",
   "type": "module",
