--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -19,10 +19,13 @@
     "@web3modal/ethereum": "^2.4.1",
     "@web3modal/react": "^2.4.1",
     "abitype": "^0.7.1",
+    "immer": "^10.0.2",
+    "nanoid": "^4.0.2",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "7.44.0-rc.3",
     "superfluid-checkout-core": "workspace:*",
+    "use-immer": "^0.9.0",
     "viem": "^0.3.26",
     "wagmi": "^1.0.5",
     "zod": "^3.21.4"
