--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -5,6 +5,18 @@
   "type": "module",
   "main": "src/index.ts",
   "types": "src/index.d.ts",
+  "exports": {
+    ".": "./dist/index.js",
+    "./webcomponent": "./dist/WebComponent.js"
+  },
+  "typesVersions": {
+    "*": {
+      "webcomponent": [
+        "dist/WebComponent.d.ts"
+      ]
+    }
+  },
+  "typings": "dist/index.d.ts",
   "scripts": {
     "watch": "tsc -w -p ./tsconfig.json",
     "build": "rimraf dist && tsc -p ./tsconfig.json"
