--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -28,7 +28,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "7.44.0-rc.3",
-    "superfluid-checkout-widget": "workspace:^",
+    "@superfluid-finance/widget": "workspace:^",
     "zod": "^3.21.4"
   },
   "devDependencies": {
