--- a/examples/widget-vite/package.json
+++ b/examples/widget-vite/package.json
@@ -13,7 +13,7 @@
     "@uniswap/token-lists": "1.0.0-beta.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "superfluid-checkout-widget": "workspace:*"
+    "@superfluid-finance/widget": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "^18.2.6",
