--- a/examples/widget-vite/package.json
+++ b/examples/widget-vite/package.json
@@ -13,7 +13,10 @@
     "@uniswap/token-lists": "1.0.0-beta.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@superfluid-finance/widget": "workspace:*"
+    "@web3modal/ethereum": "^2.4.1",
+    "@web3modal/react": "^2.4.1",
+    "@superfluid-finance/widget": "workspace:*",
+    "wagmi": "^1.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.6",
