--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -27,9 +27,6 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "5.0.0-alpha.129",
     "@uniswap/token-lists": "1.0.0-beta.31",
-    "@wagmi/core": "^1.0.5",
-    "@web3modal/ethereum": "^2.4.1",
-    "@web3modal/react": "^2.4.1",
     "abitype": "^0.7.1",
     "immer": "^10.0.2",
     "nanoid": "^4.0.2",
@@ -39,7 +36,6 @@
     "superfluid-checkout-core": "workspace:*",
     "use-immer": "^0.9.0",
     "viem": "^0.3.31",
-    "wagmi": "^1.0.5",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -54,9 +50,11 @@
     "rollup-plugin-dts": "^5.3.0",
     "tsconfig": "workspace:*",
     "tsup": "^6.7.0",
-    "typescript": "latest"
+    "typescript": "latest",
+    "wagmi": "^1.0.5"
   },
   "peerDependencies": {
-    "@mui/material": "latest"
+    "@mui/material": "latest",
+    "wagmi": "^1.0.5"
   }
 }
