--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -2,6 +2,7 @@
   "name": "@superfluid-finance/widget",
   "private": true,
   "version": "0.0.1",
+  "license": "MIT",
   "type": "module",
   "main": "src/index.ts",
   "types": "src/index.d.ts",
