--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "dev": "next dev",
     "lint": "next lint",
-    "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest"
+    "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest",
+    "start": "next start"
   },
   "dependencies": {
     "@emotion/cache": "latest",
@@ -19,8 +19,11 @@
     "@mui/lab": "5.0.0-alpha.125",
     "@mui/material": "latest",
     "@pinata/sdk": "^2.1.0",
+    "@superfluid-finance/widget": "workspace:*",
     "@tokdaniel/supertokenlist": "^1.0.0",
     "@uniswap/token-lists": "1.0.0-beta.31",
+    "@web3modal/ethereum": "^2.4.1",
+    "@web3modal/react": "^2.4.1",
     "clsx": "^1.2.1",
     "ethers": "5.7.2",
     "mui-color-input": "^1.0.5",
@@ -28,9 +31,6 @@
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "7.44.0-rc.3",
-    "@web3modal/ethereum": "^2.4.1",
-    "@web3modal/react": "^2.4.1",
-    "@superfluid-finance/widget": "workspace:*",
     "wagmi": "^1.0.5",
     "zod": "^3.21.4"
   },
