--- a/examples/widget-vite-react-web3modal/package.json
+++ b/examples/widget-vite-react-web3modal/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "widget-vite-example",
+  "name": "widget-vite-react-web3modal",
   "version": "0.0.1",
   "private": true,
   "type": "module",
@@ -12,6 +12,7 @@
   "dependencies": {
     "@superfluid-finance/widget": "workspace:*",
     "@uniswap/token-lists": "1.0.0-beta.31",
+    "@tokdaniel/supertokenlist": "^1.0.0",
     "@web3modal/ethereum": "^2.4.1",
     "@web3modal/react": "^2.4.1",
     "react": "^18.2.0",
