--- a/examples/widget-webcomponent/package.json
+++ b/examples/widget-webcomponent/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@superfluid-finance/tokenlist": "^1.0.0",
     "@superfluid-finance/widget": "workspace:*"
   },
   "devDependencies": {
