--- a/examples/widget-vite-react-web3modal/package.json
+++ b/examples/widget-vite-react-web3modal/package.json
@@ -11,21 +11,21 @@
   },
   "dependencies": {
     "@superfluid-finance/widget": "workspace:*",
+    "@superfluid-finance/tokenlist": "latest",
     "@uniswap/token-lists": "1.0.0-beta.31",
-    "@tokdaniel/supertokenlist": "^1.0.0",
     "@web3modal/ethereum": "^2.4.1",
     "@web3modal/react": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "wagmi": "^1.0.5"
+    "wagmi": "^1.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
     "@vitejs/plugin-react": "^4.0.0",
-    "eslint": "^8.40.0",
+    "eslint": "^8.41.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.5",
     "typescript": "^5.0.4",
