--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -30,6 +30,7 @@
     "@superfluid-finance/tokenlist": "^1.0.1",
     "@uniswap/token-lists": "1.0.0-beta.31",
     "abitype": "^0.7.1",
+    "blockies-ts": "^1.0.0",
     "immer": "^10.0.2",
     "nanoid": "^4.0.2",
     "react": "latest",
