--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -20,7 +20,8 @@
   "typings": "dist/index.d.ts",
   "scripts": {
     "build": "tsc -p ./tsconfig.json",
-    "watch": "tsc -w -p ./tsconfig.json"
+    "watch": "tsc -w -p ./tsconfig.json",
+    "typedoc": "typedoc --out docs src/index.ts"
   },
   "dependencies": {
     "@emotion/react": "latest",
@@ -53,6 +54,7 @@
     "rollup-plugin-dts": "^5.3.0",
     "tsconfig": "workspace:*",
     "tsup": "^6.7.0",
+    "typedoc": "^0.24.7",
     "typescript": "latest",
     "wagmi": "^1.0.6"
   },
