solve easier todo-s

--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -36,6 +36,7 @@
     "abitype": "^0.7.1",
     "blockies-ts": "^1.0.0",
     "immer": "^10.0.2",
+    "lodash.memoize": "^4.1.2",
     "nanoid": "^4.0.2",
     "react": "latest",
     "react-dom": "latest",
@@ -50,6 +51,7 @@
     "@mui/material": "^5.13.2",
     "@rollup/plugin-multi-entry": "^6.0.0",
     "@rollup/plugin-terser": "^0.4.3",
+    "@types/lodash.memoize": "^4.1.7",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "rimraf": "^5.0.1",
