update even more packages

--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -10,14 +10,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "@emotion/cache": "latest",
-    "@emotion/react": "latest",
-    "@emotion/server": "latest",
-    "@emotion/styled": "latest",
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/server": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@faker-js/faker": "^8.0.2",
-    "@mui/icons-material": "latest",
-    "@mui/lab": "5.0.0-alpha.125",
-    "@mui/material": "latest",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "5.0.0-alpha.132",
+    "@mui/material": "^5.13.3",
     "@pinata/sdk": "^2.1.0",
     "@superfluid-finance/tokenlist": "^1.0.1",
     "@superfluid-finance/widget": "workspace:*",
@@ -25,11 +25,10 @@
     "@web3modal/ethereum": "^2.4.1",
     "@web3modal/react": "^2.4.1",
     "clsx": "^1.2.1",
-    "ethers": "5.7.2",
     "mui-color-input": "^1.0.6",
     "next": "^13.4.4",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.2",
     "wagmi": "^1.0.9",
     "zod": "^3.21.4"
@@ -37,9 +36,9 @@
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
     "@types/node": "^20.2.5",
-    "@types/react": "latest",
-    "eslint": "latest",
+    "@types/react": "^18.2.7",
+    "eslint": "^8.41.0",
     "eslint-config-next": "^13.4.4",
-    "typescript": "latest"
+    "typescript": "^5.0.4"
   }
 }
