--- a/examples/widget-vite-react-web3modal/package.json
+++ b/examples/widget-vite-react-web3modal/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@superfluid-finance/tokenlist": "latest",
+    "@superfluid-finance/tokenlist": "^1.0.1",
     "@superfluid-finance/widget": "workspace:*",
     "@uniswap/token-lists": "1.0.0-beta.31",
     "@web3modal/ethereum": "^2.4.1",
@@ -27,7 +27,7 @@
     "@vitejs/plugin-react": "^4.0.0",
     "eslint": "^8.41.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.5",
+    "eslint-plugin-react-refresh": "^0.4.1",
     "typescript": "^5.0.4",
     "vite": "^4.3.9"
   }
