--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -27,19 +27,19 @@
     "typedoc": "typedoc --out docs src/index.ts"
   },
   "dependencies": {
-    "@emotion/react": "latest",
-    "@emotion/styled": "latest",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
-    "@mui/lab": "5.0.0-alpha.129",
+    "@mui/lab": "5.0.0-alpha.132",
     "@superfluid-finance/tokenlist": "^1.0.1",
     "@uniswap/token-lists": "1.0.0-beta.31",
-    "abitype": "^0.7.1",
+    "abitype": "^0.8.5",
     "blockies-ts": "^1.0.0",
     "immer": "^10.0.2",
     "lodash.memoize": "^4.1.2",
     "nanoid": "^4.0.2",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.2",
     "superfluid-checkout-core": "workspace:*",
     "use-immer": "^0.9.0",
@@ -52,15 +52,15 @@
     "@rollup/plugin-multi-entry": "^6.0.0",
     "@rollup/plugin-terser": "^0.4.3",
     "@types/lodash.memoize": "^4.1.7",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
     "rimraf": "^5.0.1",
     "rollup": "^3.23.0",
     "rollup-plugin-dts": "^5.3.0",
     "tsconfig": "workspace:*",
     "tsup": "^6.7.0",
     "typedoc": "^0.24.7",
-    "typescript": "latest",
+    "typescript": "^5.0.4",
     "wagmi": "^1.0.9"
   },
   "peerDependencies": {
