--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -23,6 +23,7 @@
   ],
   "scripts": {
     "build": "tsc -p ./tsconfig.json",
+    "wagmi-generate": "wagmi generate",
     "watch": "tsc -w -p ./tsconfig.json",
     "typedoc": "typedoc --out docs src/index.ts"
   },
@@ -32,6 +33,9 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "5.0.0-alpha.132",
     "@superfluid-finance/tokenlist": "^1.0.2",
+    "@wagmi/chains": "^0.3.1",
+    "@wagmi/cli": "^1.0.3",
+    "@wagmi/core": "^1.0.8",
     "abitype": "^0.8.5",
     "blockies-ts": "^1.0.0",
     "immer": "^10.0.2",
@@ -40,7 +44,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.2",
-    "superfluid-checkout-core": "workspace:*",
     "use-immer": "^0.9.0",
     "viem": "^0.3.39",
     "zod": "^3.21.4"
