--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -23,9 +23,9 @@
   ],
   "scripts": {
     "build": "tsc -p ./tsconfig.json",
-    "wagmi-generate": "wagmi generate",
-    "watch": "tsc -w -p ./tsconfig.json",
-    "typedoc": "typedoc --out docs src/index.ts"
+    "typedoc": "typedoc --out docs src/index.ts",
+    "wagmi": "wagmi generate",
+    "watch": "tsc -w -p ./tsconfig.json"
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -33,9 +33,6 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "5.0.0-alpha.132",
     "@superfluid-finance/tokenlist": "^1.0.2",
-    "@wagmi/chains": "^0.3.1",
-    "@wagmi/cli": "^1.0.3",
-    "@wagmi/core": "^1.0.8",
     "abitype": "^0.8.5",
     "blockies-ts": "^1.0.0",
     "immer": "^10.0.2",
@@ -51,22 +48,16 @@
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
     "@mui/material": "^5.13.3",
-    "@rollup/plugin-multi-entry": "^6.0.0",
-    "@rollup/plugin-terser": "^0.4.3",
     "@types/lodash.memoize": "^4.1.7",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
-    "rimraf": "^5.0.1",
-    "rollup": "^3.23.0",
-    "rollup-plugin-dts": "^5.3.0",
+    "@wagmi/cli": "^1.0.3",
     "tsconfig": "workspace:*",
-    "tsup": "^6.7.0",
     "typedoc": "^0.24.7",
     "typescript": "^5.0.4",
     "wagmi": "^1.0.9"
   },
   "peerDependencies": {
-    "@mui/material": "latest",
     "wagmi": "^1.0.5"
   }
 }
