--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -51,7 +51,7 @@
     "@types/lodash.memoize": "^4.1.7",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
-    "@wagmi/cli": "^1.0.3",
+    "@wagmi/cli": "1.0.2",
     "tsconfig": "workspace:*",
     "typedoc": "^0.24.7",
     "typescript": "^5.0.4",
