--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "superfluid-widget-builder",
+  "name": "@superfluid-finance/widget-builder",
   "version": "0.0.1",
   "private": true,
   "scripts": {
