--- a/turbo.json
+++ b/turbo.json
@@ -7,9 +7,11 @@
       "outputs": ["dist/**"]
     },
     "@superfluid-finance/widget#build": {
+      "dependsOn": ["^build"],
       "outputs": ["dist/**", "docs/**"]
     },
     "@superfluid-finance/widget-builder#build": {
+      "dependsOn": ["^build"],
       "outputs": [".next/**", "!.next/cache/**"],
       "env": [
         "NEXT_PUBLIC_GOOGLE_FONTS_API_KEY",
@@ -17,6 +19,7 @@
       ]
     },
     "@superfluid-finance/hosted-widget#build": {
+      "dependsOn": ["^build"],
       "outputs": [".next/**", "!.next/cache/**"],
       "env": [
         "NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID"
