--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -28,6 +28,7 @@
     "watch": "tsc -w -p ./tsconfig.json"
   },
   "dependencies": {
+    "@changesets/cli": "^2.26.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
