--- a/.github/workflows/publish-widget.yml
+++ b/.github/workflows/publish-widget.yml
@@ -36,8 +36,8 @@ jobs:
         id: changesets
         uses: changesets/action@v1
         with:
-          run: |
-            cwd packages/widget
+          cwd: |
+            packages/widget
           publish: pnpm release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
