--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "typescript": "^5.0.4"
   },
   "packageManager": "pnpm@7.15.0",
-  "name": "superfluid-checkout"
+  "name": "superfluid-checkout",
+  "dependencies": {
+    "@changesets/cli": "^2.26.1"
+  }
 }
