--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalDependencies": ["**/.env.*local"],
+  "globalEnv": ["GITHUB_TOKEN"],
+  "globalDependencies": ["**/.env.*local", "tsconfig.json"],
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
