--- a/.github/workflows/publish-widget.yml
+++ b/.github/workflows/publish-widget.yml
@@ -35,11 +35,7 @@ jobs:
       - name: Build Widget
         run: pnpm build
 
-      - name: Create Release Pull Request or Publish to npm
-        id: changesets
-        uses: changesets/action@v1
-        with:
-          publish: cd packages/widget && pnpm release
+      - name: Publish package to npm
+        run: npm publish packages/widget --access public
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
