--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -27,6 +27,9 @@
     "wagmi": "wagmi generate",
     "watch": "tsc -w -p ./tsconfig.json"
   },
+  "publishConfig": {
+    "branch": "feature/widget-release"
+  },
   "dependencies": {
     "@changesets/cli": "^2.26.1",
     "@emotion/react": "^11.11.0",
