Feature/widget release (#11)
* release

* release.yaml changes

* no changeset

* use pnpm to publish

* remove test

* temp publishConfig

* remove publishconfig

--- a/.github/workflows/publish-widget.yml
+++ b/.github/workflows/publish-widget.yml
@@ -32,11 +32,10 @@ jobs:
       - name: Install Dependencies
         run: pnpm i
 
-      - name: Create Release Pull Request or Publish to npm
-        id: changesets
-        uses: changesets/action@v1
-        with:
-          publish: pnpm release
+      - name: Build Widget
+        run: pnpm build
+
+      - name: Publish package to npm
+        run: pnpm publish packages/widget --access public
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
