--- a/.github/workflows/publish-widget.yml
+++ b/.github/workflows/publish-widget.yml
@@ -36,6 +36,6 @@ jobs:
         run: pnpm build
 
       - name: Publish package to npm
-        run: pnpm publish packages/widget --access public
+        run: pnpm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
