add back auth with npm

--- a/.github/workflows/publish-widget.yml
+++ b/.github/workflows/publish-widget.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Build Widget
         run: pnpm build
 
+      - name: Authenticate with npm
+        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > .npmrc
+
       - name: Publish package to npm
         run: pnpm publish --access public
         env:
