--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
+  "name": "superfluid-checkout",
   "private": true,
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
-    "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "lint": "turbo run lint",
     "sort-package-jsons": "npx sort-package-json \"**/package.json\" \"!**/node_modules/**\" --check"
+  },
+  "dependencies": {
+    "@changesets/cli": "^2.26.1"
   },
   "devDependencies": {
     "eslint": "^8.41.0",
@@ -15,9 +19,5 @@
     "turbo": "^1.10.1",
     "typescript": "^5.0.4"
   },
-  "packageManager": "pnpm@7.15.0",
-  "name": "superfluid-checkout",
-  "dependencies": {
-    "@changesets/cli": "^2.26.1"
-  }
+  "packageManager": "pnpm@7.15.0"
 }
