--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -24,9 +24,9 @@
   ],
   "scripts": {
     "build": "cp ../../README.md . && tsc -p ./tsconfig.json",
+    "dev": "tsc -w -p ./tsconfig.json",
     "typedoc": "typedoc --out docs src/index.ts",
-    "wagmi": "wagmi generate",
-    "watch": "tsc -w -p ./tsconfig.json"
+    "wagmi": "wagmi generate"
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
