--- a/turbo.json
+++ b/turbo.json
@@ -15,15 +15,17 @@
       "dependsOn": ["^build"],
       "outputs": [".next/**", "!.next/cache/**"],
       "env": [
+        "NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID",
         "NEXT_PUBLIC_GOOGLE_FONTS_API_KEY",
-        "NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID"
+        "NEXT_PUBLIC_SEGMENT_WRITE_KEY"
       ]
     },
     "@superfluid-finance/hosted-widget#build": {
       "dependsOn": ["^build"],
       "outputs": [".next/**", "!.next/cache/**"],
       "env": [
-        "NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID"
+        "NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID", 
+        "NEXT_PUBLIC_SEGMENT_WRITE_KEY"
       ]
     },
     "lint": {},
