--- a/apps/widget-builder/src/.env.example
+++ b/apps/widget-builder/src/.env.example
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=
 NEXT_PUBLIC_GOOGLE_FONTS_API_KEY=
 NEXT_PUBLIC_SEGMENT_WRITE_KEY=
+NEXT_PUBLIC_PINATA_API_KEY=
+NEXT_PUBLIC_PINATA_API_KEY=
