--- a/turbo.json
+++ b/turbo.json
@@ -17,7 +17,9 @@
       "env": [
         "NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID",
         "NEXT_PUBLIC_GOOGLE_FONTS_API_KEY",
-        "NEXT_PUBLIC_SEGMENT_WRITE_KEY"
+        "NEXT_PUBLIC_SEGMENT_WRITE_KEY",
+        "NEXT_PUBLIC_PINATA_API_KEY",
+        "NEXT_PUBLIC_PINATA_API_SECRET"
       ]
     },
     "@superfluid-finance/hosted-widget#build": {
