--- a/turbo.json
+++ b/turbo.json
@@ -16,15 +16,15 @@
       "outputs": [".next/**", "!.next/cache/**"],
       "env": [
         "NEXT_PUBLIC_GOOGLE_FONTS_API_KEY",
-        "NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID"
+        "NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID",
+        "NEXT_PUBLIC_PINATA_API_KEY",
+        "NEXT_PUBLIC_PINATA_API_SECRET"
       ]
     },
     "@superfluid-finance/hosted-widget#build": {
       "dependsOn": ["^build"],
       "outputs": [".next/**", "!.next/cache/**"],
-      "env": [
-        "NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID"
-      ]
+      "env": ["NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID"]
     },
     "lint": {},
     "dev": {
