--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@superfluid-finance/widget",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "private": false,
   "license": "MIT",
   "type": "module",
@@ -44,7 +44,6 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.2",
     "use-immer": "^0.9.0",
-    "viem": "^0.3.41",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -57,9 +56,11 @@
     "tsconfig": "workspace:*",
     "typedoc": "^0.24.7",
     "typescript": "^5.0.4",
-    "wagmi": "^1.0.9"
+    "wagmi": "^1.0.9",
+    "viem": "~0.3.35"
   },
   "peerDependencies": {
-    "wagmi": "^1.0.5"
+    "wagmi": "^1.0.5",
+    "viem": "~0.3.35"
   }
 }
