--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -35,14 +35,14 @@
     "@mui/lab": "5.0.0-alpha.132",
     "@mui/utils": "^5.13.1",
     "@superfluid-finance/tokenlist": "^1.0.2",
-    "abitype": "^0.8.6",
+    "abitype": "^0.8.7",
     "blockies-ts": "^1.0.0",
     "immer": "^10.0.2",
     "lodash.memoize": "^4.1.2",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.44.2",
+    "react-hook-form": "^7.44.3",
     "use-immer": "^0.9.0",
     "zod": "^3.21.4"
   },
@@ -52,15 +52,15 @@
     "@types/lodash.memoize": "^4.1.7",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
-    "@wagmi/cli": "1.0.2",
+    "@wagmi/cli": "1.1.0",
     "tsconfig": "workspace:*",
-    "typedoc": "^0.24.7",
-    "typescript": "^5.0.4",
-    "wagmi": "^1.0.9",
-    "viem": "~0.3.35"
+    "typedoc": "^0.24.8",
+    "typescript": "^5.1.3",
+    "viem": "~0.3.50",
+    "wagmi": "^1.1.0"
   },
   "peerDependencies": {
-    "wagmi": "^1.0.5",
-    "viem": "~0.3.35"
+    "viem": "~0.3.35",
+    "wagmi": "^1.0.5"
   }
 }
