--- a/package.json
+++ b/package.json
@@ -22,10 +22,5 @@
     "turbo": "^1.10.1",
     "typescript": "^5.1.3"
   },
-  "packageManager": "pnpm@7.15.0",
-  "husky": {
-    "hooks": {
-      "pre-push": "pnpm lint"
-    }
-  }
+  "packageManager": "pnpm@7.15.0"
 }
