add sentry to hosted-widget

--- a/apps/hosted-widget/package.json
+++ b/apps/hosted-widget/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.3",
     "@segment/analytics-next": "^1.52.0",
+    "@sentry/nextjs": "^7.54.0",
     "@superfluid-finance/tokenlist": "^1.0.2",
     "@superfluid-finance/widget": "workspace:*",
     "@web3modal/ethereum": "^2.4.2",
