--- a/.gitignore
+++ b/.gitignore
@@ -195,3 +195,6 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/vercel,nextjs,react,visualstudiocode,webstorm,turbo
 
 packages/widget/dist
+
+# Sentry Auth Token
+.sentryclirc
