add publish trigger on changeset release branches

--- a/.github/workflows/publish-widget.yml
+++ b/.github/workflows/publish-widget.yml
@@ -2,9 +2,9 @@ name: Publish Widget to NPM
 
 on:
   workflow_dispatch:
-#   push:
-#     branches:
-#       - main
+  push:
+    branches:
+      - changeset-release/master
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
