add back versions & ignore every package other than the widget

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "superfluid-checkout",
   "private": true,
+  "version": "0.0.0",
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
