--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -6,6 +6,6 @@
   "linked": [],
   "access": "public",
   "baseBranch": "master",
-  "updateInternalDependencies": "patch",
-  "ignore": []
+  "updateInternalDependencies": "minor",
+  "ignore": ["!(@superfluid-finance/widget)"]
 }
