install peer dependencies manually

--- a/apps/widget-builder/package.json
+++ b/apps/widget-builder/package.json
@@ -23,6 +23,7 @@
     "@sentry/nextjs": "^7.54.0",
     "@superfluid-finance/tokenlist": "^1.1.0",
     "@superfluid-finance/widget": "workspace:*",
+    "@wagmi/core": "^1.2.0",
     "@web3modal/ethereum": "^2.4.5",
     "@web3modal/react": "^2.4.5",
     "clsx": "^1.2.1",
@@ -31,6 +32,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
+    "viem": "^1.0.0",
     "wagmi": "^1.0.0",
     "zod": "^3.0.0"
   },
