--- a/apps/hosted-widget/package.json
+++ b/apps/hosted-widget/package.json
@@ -20,6 +20,7 @@
     "@sentry/nextjs": "^7.54.0",
     "@superfluid-finance/tokenlist": "^1.1.0",
     "@superfluid-finance/widget": "workspace:*",
+    "@wagmi/core": "^1.2.0",
     "@web3modal/ethereum": "^2.4.5",
     "@web3modal/react": "^2.4.5",
     "clsx": "^1.2.1",
