--- a/examples/widget-vite-react-rainbowkit/package.json
+++ b/examples/widget-vite-react-rainbowkit/package.json
@@ -15,6 +15,7 @@
     "@superfluid-finance/widget": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "viem": "^1.0.0",
     "wagmi": "^1.0.0"
   },
   "devDependencies": {
