--- a/examples/widget-vite-react-web3modal/package.json
+++ b/examples/widget-vite-react-web3modal/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@superfluid-finance/tokenlist": "^1.1.0",
     "@superfluid-finance/widget": "workspace:*",
+    "@wagmi/core": "^1.2.0",
     "@web3modal/ethereum": "^2.4.5",
     "@web3modal/react": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "viem": "^1.0.0",
     "wagmi": "^1.0.0"
   },
   "devDependencies": {
