--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -51,6 +51,7 @@
     "@types/lodash.memoize": "^4.1.7",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
+    "@wagmi/cli": "^1.2.0",
     "tsconfig": "workspace:*",
     "typedoc": "^0.24.8",
     "typescript": "^5.1.3",
@@ -58,7 +59,7 @@
     "wagmi": "^1.0.0"
   },
   "peerDependencies": {
-    "wagmi": ">=1",
-    "viem": ">=1"
+    "viem": ">=1",
+    "wagmi": ">=1"
   }
 }
