--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
-# These are supported funding model platforms
+# This funding url is for demo purposes only.
 
 
-custom: ["https://checkout.superfluid.finance/QmRbGkmU5wd4nL9coeKFLTb6kVmBYF7TmdCrbz4pemLk3v"]
+custom: ["https://checkout.superfluid.finance/QmQNJ8T4soCSo3jokEB9cavR3zar7LZ4cm5HtQpKGFMLWL"]
