Fix pnpm workflow file

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,30 +1,25 @@
 name: Playwright Tests
 
 on:
-  deployment_status:
+  pull_request:
+    types: [ opened, reopened, ready_for_review, synchronize ]
 
 jobs:
-
-  echo:
-    runs-on: ubuntu-latest
-    steps:
-     - name: Echo deployment for debugging
-       run: |
-        echo ${{ github.event.deployment.url }}
-        echo ${{ github.event.deployment.description }}
-        echo ${{ github.event.deployment.environment }}
-        echo ${{ github.event.deployment_status.deployment_url }}
-        echo ${{ github.event.deployment_status.environment_url }}
-        echo ${{ github.event.deployment_status.environment }}
-
   test:
-    if: github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success' && github.event.deployment_status.environment == 'Preview – widget-builder'
+    if: ${{ !github.event.pull_request.draft }}
+    timeout-minutes: 60
     defaults:
       run:
         working-directory: tests
-    timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
+      - name: Wait for widget builder to be deployed
+        uses: SFDigitalServices/wait-for-deployment-action@v1
+        id: deployment
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          environment: Preview - widget-builder 
+
       - uses: actions/checkout@v3
 
       - uses: pnpm/action-setup@v2
@@ -54,7 +49,7 @@ jobs:
           fluxbox &
           pnpm playwright test
         env:
-          BASE_URL: ${{ github.event.deployment_status.environment_url }}
+          BASE_URL: ${{ steps.deployment.outputs.url }}
           CURRENTS_PROJECT_ID: ${{ secrets.WIDGET_CURRENTS_PROJECT_ID }}
           CURRENTS_RECORD_KEY: ${{ secrets.CURRENTS_RECORD_KEY }}
           CURRENTS_CI_BUILD_ID: ${{ github.repository }}-${{ github.run_id }}-${{ github.run_attempt}}
