Read baseurl from env

--- a/turbo.json
+++ b/turbo.json
@@ -39,7 +39,8 @@
         "CI",
         "METAMASK_VERSION",
         "HEADLESS_MODE",
-        "WIDGET_WALLET_PRIVATE_KEY"
+        "WIDGET_WALLET_PRIVATE_KEY",
+        "BASE_URL"
       ]
     },
     "lint": {},
